--- a/betas/betterpy/index.html
+++ b/betas/betterpy/index.html
@@ -19,30 +19,28 @@
 <body>
 	<center>
 		<h1>Daydot Helper</h1>
-		<p>By <a class="byStormy" href="../../index.html">St&#243;rmy</a></p>
+		<p>By <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy</a></p>
 		<hr>
 		<div>
 			<p>Start Date:</p>
-			<input class="button" name="setTodayBtn" type="button" id="today" onClick="setCurrentDate(1)" value="Today" />
-			<input class="button" name="setTomorrowBtn" type="button" id="tomorrow" onClick="setCurrentDate(2)" value="Tomorrow" /> &nbsp;
+			<input class="button" type="button" id="today" onClick="setCurrentDate(1)" value="Today" />
+			<input class="button" type="button" id="tomorrow" onClick="setCurrentDate(2)" value="Tomorrow" /> &nbsp;
 			<input class="button" type="date" id="startDate" name="startDate" value="">
 			<p>How many days until expiration:</p>
-			<input id="3" class="button" type="button" name="days" value="3 days" onClick="setDates(3)" />
-			<input id="4" class="button" type="button" name="days" value="4 days" onClick="setDays(4)" />
-			<input id="5" class="button" type="button" name="days" value="5 days" onClick="setDays(5)" />
-			<input id="7" class="button" type="button" name="days" value="7 days" onClick="setDays(7)" />
+			<input class="button" type="button" value="3 days" onClick="setDays(3)" />
+			<input class="button" type="button" value="4 days" onClick="setDays(4)" />
+			<input class="button" type="button" value="5 days" onClick="setDays(5)" />
+			<input class="button" type="button" value="7 days" onClick="setDays(7)" />
 			<p></p>
-			<input id="4weeks" class="button" type="button" name="weeks" value="4 weeks" onClick="setWeeks(4)" />
-			<!--<input type="button" name="1dayBtn" value="30 days" onClick="setDays(30)"/>-->
-			<input id="1month" class="button" type="button" name="months" value="1 month" onClick="setMonths(1)" />
-			<!--<input type="button" name="1dayBtn" value="45 days" onClick="setDays(45)"/>-->
-			<input id="12weeks" class="button" type="button" name="weeks" value="12 weeks" onClick="setWeeks(12)" />
-			<input id="3months" class="button" type="button" name="months" value="3 months" onClick="setMonths(3)" />
+			<input class="button" type="button" value="4 weeks" onClick="setWeeks(4)" />
+			<input class="button" type="button" value="1 month" onClick="setMonths(1)" />
+			<input class="button" type="button" value="12 weeks" onClick="setWeeks(12)" />
+			<input class="button" type="button" value="3 months" onClick="setMonths(3)" />
 			<p>Specific days/months until expiration:</p>
-			<input class="button" id="dataVal" name="dataVal" type="number" placeholder="45">
-			<input class="button" type="button" name="days" value="days" onClick="setDays(parseInt(document.getElementById('dataVal').value))" />
-			<input class="button" type="button" name="weeks" value="weeks" onClick="setWeeks(parseInt(document.getElementById('dataVal').value))" />
-			<input class="button" type="button" name="months" value="months" onClick="setMonths(parseInt(document.getElementById('dataVal').value))" />
+			<input class="button" id="dataVal" type="number" placeholder="45">
+			<input class="button" type="button" value="days" onClick="setDays(parseInt(document.getElementById('dataVal').value))" />
+			<input class="button" type="button" value="weeks" onClick="setWeeks(parseInt(document.getElementById('dataVal').value))" />
+			<input class="button" type="button" value="months" onClick="setMonths(parseInt(document.getElementById('dataVal').value))" />
 		</div>
 		<div id="result"></div>
 		&nbsp;
@@ -54,7 +52,7 @@
 	<hr>
 	<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</a></p>
 </hr>
-<p>My Favourites:<br>Marine Point <a class="byStormy" href="betas/betterpy/index.html">&#8226;</a> Ellesmere Port DT <a class="byStormy" href="betas/stickers/index.html">&#8226;</a> Liverpool Lime St</p>
+<p>My Favourites:<br>Marine Point <a class="byStormy" href="../../index.html">&#8226;</a> Ellesmere Port DT <a class="byStormy" href="../stickers/index.html">&#8226;</a> Liverpool Lime St</p>
 </center>
 </body>
 </html>
