--- a/index.html
+++ b/index.html
@@ -12,255 +12,72 @@
 	<script>
 		$(document).ready(function() {
 			document.getElementById("today").click();
-		});
-		
+		});	
 	</script>
 </head>
 <body>
-	<!--<div class="alert info">
-  		<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  		<strong>Current Campaign</strong><br>Mince Pies • Food Capture Rate (%) • Festive Drinks
-	</div>-->
 	<center>
 		<h1>Daydot Helper</h1>
 		<p>By <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy</a></p>
 		<hr>
 		<div>
 			<p>Start Date:</p>
-			<input class="button" type="button" id="today" onClick="setCurrentDate(1)" value="Today" />
-			<input class="button" type="button" id="tomorrow" onClick="setCurrentDate(2)" value="Tomorrow" /> &nbsp;
+			<input class="button" name="setTodayBtn" type="button" id="today" onClick="setTodayDate()" value="Today" />
+			<input class="button" name="setTomorrowBtn" type="button" id="today" onClick="setTomorrowDate()" value="Tomorrow" /> &nbsp;
 			<input class="button" type="date" id="startDate" name="startDate" value="">
 			<p>How many days until expiration:</p>
-			<input class="button" type="button" value="3 days" onClick="setDays(3)" />
-			<input class="button" type="button" value="4 days" onClick="setDays(4)" />
-			<input class="button" type="button" value="5 days" onClick="setDays(5)" />
-			<input class="button" type="button" value="7 days" onClick="setDays(7)" />
+			<input id="3days" class="button" type="button" name="1dayBtn" value="3 days" onClick="setDays(3)" />
+			<input id="4days" class="button" type="button" name="1dayBtn" value="4 days" onClick="setDays(4)" />
+			<input id="5days" class="button" type="button" name="1dayBtn" value="5 days" onClick="setDays(5)" />
+			<input id="7days" class="button" type="button" name="1dayBtn" value="7 days" onClick="setDays(7)" />
 			<p></p>
-			<input class="button" type="button" value="4 weeks" onClick="setWeeks(4)" />
-			<input class="button" type="button" value="1 month" onClick="setMonths(1)" />
-			<input class="button" type="button" value="12 weeks" onClick="setWeeks(12)" />
-			<input class="button" type="button" value="3 months" onClick="setMonths(3)" />
-			<p>Specific days/weeks/months until expiration:</p>
-			<input class="button" id="dataVal" type="number" pattern="[0-9]*" inputmode="numeric" placeholder="45">
-			<input class="button" type="button" value="days" onClick="setDays(parseInt(document.getElementById('dataVal').value))" />
-			<input class="button" type="button" value="weeks" onClick="setWeeks(parseInt(document.getElementById('dataVal').value))" />
-			<input class="button" type="button" value="months" onClick="setMonths(parseInt(document.getElementById('dataVal').value))" />
+			<input id="4weeks" class="button" type="button" name="1weekBtn" value="4 weeks" onClick="setWeeks(4)" />
+			<!--<input type="button" name="1dayBtn" value="30 days" onClick="setDays(30)"/>-->
+			<input id="1month" class="button" type="button" name="1monthBtn" value="1 month" onClick="setMonths(1)" />
+			<!--<input type="button" name="1dayBtn" value="45 days" onClick="setDays(45)"/>-->
+			<input id="12weeks" class="button" type="button" name="1weekBtn" value="12 weeks" onClick="setWeeks(12)" />
+			<input id="3months" class="button" type="button" name="1monthBtn" value="3 months" onClick="setMonths(3)" />
+			<p>Specific days/months until expiration:</p>
+			<input class="button" id="dataVal" name="dataVal" type="number" placeholder="45">
+			<input class="button" type="button" name="dataDayBtn" value="days" onClick="setFreeDays()" />
+			<input class="button" type="button" name="dataWeekBtn" value="weeks" onClick="setFreeWeeks()" />
+			<input class="button" type="button" name="dataMonthBtn" value="months" onClick="setFreeMonths()" />
 		</div>
 		<div id="result"></div>
+		<button onclick="document.getElementById('replace-me').innerHTML = '14'">14</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '12'">12</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '30'">30</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '26'">26</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '8'">8</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '5'">5</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '29'">29</button>
+		<button onclick="document.getElementById('replace-me').innerHTML = '7'">7</button>
+		<br>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/monday.png)'">Monday</button>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/tuesday.png)'">Tuesday</button>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/wednesday.png)'">Wednesday</button>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/thursday.png)'">Thursday</button>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/friday.png)'">Friday</button>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/saturday.png)'">Saturday</button>
+		<button onclick="document.getElementById('daydotContainer').style.backgroundImage='url(images/sunday.png)'">Sunday</button>
+		<br>
+		<div class="container" id="daydotContainer">
+			<div style="margin-top: 23%;">
+				<p class="centered1" id="replace-me1">September</p>
+				<p class="centered" id="replace-me">12</p>
+				<p class="centered2" id="replace-me2">2022</p>
+			</div>
+		</div>
 		&nbsp;
-		    <hr>
-    <div id="myDIV">
-      <input class="button" type="text" style="width:80%;" id="myInput" placeholder="e.g. Vanilla Syrup" onkeyup="myFunction()">
-      <div class="tableFixHead">
-        <table id="myTable">
-          <thead>
-            <tr class="header">
-              <th>Product</th>
-              <th style="width:15%;">Day Dot</th>
-            </tr>
-          </thead>
-          <tr>
-            <td>Hot Chocolate Powder</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Frappe Powder</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Costa Syrups (Caramel/Vanilla/Hazelnut)</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Monin (SF) Sugar Free Syrups (Caramel/Vanilla/Hazelnut)</td>
-            <td>3 Months</td>
-          </tr>
-          <tr>
-            <td>White Chocolate Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Spiced Chai Syrup</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Salted Caramel Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Strawberry Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>(SF) Sugar Free Coconut Syrup</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Caramel Chocolate Flavour Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Mango Sauce</td>
-            <td>8 Weeks</td>
-          </tr>
-          <tr>
-            <td>Fuze Tea Syrup Bases</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Chocolate and Honey Flavour Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Orange Flavour Syrup</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Caramel Vermicelli</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Strawberry Sprinkles</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Gingerbread Person</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Golden Twinkle Sprinkle/Festive Twinkle</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Mango Juicy Pearls</td>
-            <td>2 Weeks</td>
-          </tr>
-          <tr>
-            <td>Fruit Cooler Bases</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Chocolate Flavoured Brownie Crumb</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Cappuccino Dusting</td>
-            <td>1 Month</td>
-          </tr>
-          <tr>
-            <td>Lemon Slices</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Flakes/Marshmallows</td>
-            <td>See box</td>
-          </tr>
-          <tr>
-            <td>All Fuze Teabags</td>
-            <td>3 Months</td>
-          </tr>
-          <tr>
-            <td>Adez Dairy Alternatives</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Whipped Cream (Canister)</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Whipped Cream (Open Bottle)</td>
-            <td>3 Days</td>
-          </tr>
-          <tr>
-            <td>Light Dairy Swirl (Canister)</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Vegan Fruited Teacake</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Muffins (Bluberry/Lemon)</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Seasonal Muffins (Chocolate Inspired by Toblerone/Terry's Chocolate Orange/Reindeer)</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Cinnamon Bun</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Pastal De Nata</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Brown Seeded Bread/White Bread for Toast<br>(Day Dot should be added to plastic bag. Please Reseal bag between uses.)</td>
-            <td>3 Days</td>
-          </tr>
-          <tr>
-            <td>Raspberry Triple Loaf Cake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Chocolate and Caramelised Biscuit Loaf Cake</td>
-            <td>4 Days</td>
-          </tr>
-          <tr>
-            <td>Loaded Chocolate and Hazelnut Cake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>St Clement's Chocolate Drizzle Loaf Cake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Millionaire Shortbread</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Raspberry and Almond Bake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Chocolate Tiffin</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Bakewell Tart</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>All Butter Mince Pie</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Lemon Curd Tart</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Salted Caramel Brownie</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Vegan Rocky Road</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Crispy Festive Wreath</td>
-            <td>7 Days</td>
-          </tr>
-        </table>
-      </div>
-      <hr>
-    </div>
-		<p>The menu has been updated using the official in-store Day Dot Sheets (November 2022)</p>
-	</center>
-	<center>
 		<hr>
-		<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</a></p>
-	</center>
+		<p>I have removed the menu as it is outdated. If anyone would like it updated, please email me the menu at: <a href="mailto:me@imstormy.com?subject=Daydot Helper">me@imstormy.com</a></p>
+	</hr>
+</center>
+<center>
+	<hr>
+	<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</a></p>
+</hr>
+<p>My Favourites:<br>Marine Point <a class="byStormy" href="../../index.html">&#8226;</a> Ellesmere Port DT <a class="byStormy" href="../betterpy/index.html">&#8226;</a> Liverpool Lime St</p>
+</center>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.1/processing-api.min.js"></script>
 </html>
